--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 codesniffer/ export-ignore
-tests/ export-ignore
+hooks/ export-ignore
 lib/Testes export-ignore
+tests/ export-ignore
 .git export-ignore
 .gitignore export-ignore
 .gitattributes export-ignore
