--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 
 php:
-  - "5.4"
+  - 5.4
 
 before_script: composer install --dev
 
-script: php bin/cli test
+script: php www/index.php test
