--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "license": "MIT",
     "name": "treshugart/europaphp",
     "require": {
-        "php": ">=5.4.0"
+        "php": "5.4.*",
+        "ext-yaml": "1.1.*"
     },
     "require-dev": {
         "treshugart/testes": "1.0.x-dev"
