Trying to get past yaml install.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ php:
   - 5.4
 
 before_script:
-  - pecl install yaml
+  - spawn pecl install yaml
+  - expect "Please provide the prefix of libyaml installation [autodetect] :"
+  - send "\r"
+  - expect eof
   - composer selfupdate
   - composer install --dev
 
