--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "europaphp/europaphp",
+    "description": "A feather-weight, extremely-fast, diverse, scalable and productive PHP 5.4 View Controller framework.",
+    "keywords": ["mvc", "view", "controller", "fast", "scalable", "simple", "module", "modular"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Trey Shugart",
@@ -12,16 +16,15 @@
             "Europa": "src"
         }
     },
-    "description": "A feather-weight, extremely-fast, diverse, scalable and productive PHP 5.4 View Controller framework.",
-    "homepage": "http://github.com/treshugart/EuropaPHP",
-    "keywords": ["mvc", "view", "controller", "fast", "scalable", "simple"],
-    "license": "MIT",
-    "name": "treshugart/europaphp",
     "require": {
         "php": "5.4.*",
-        "ext-yaml": "1.1.*"
+        "ext-yaml": "1.1.*",
+        "europaphp/module-help": "0.1.*",
+        "europaphp/module-main": "0.1.*",
+        "europaphp/module-tests": "0.1.*"
     },
     "require-dev": {
+        "ext-xdebug": "2.1.*",
         "treshugart/testes": "1.0.x-dev"
     }
 }
