Attempting to get packagist to allow repos of the same name.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "ext-xdebug": "2.1.*",
         "treshugart/testes": "1.0.x-dev"
     },
-    "conflict": {
+    "replace": {
         "treshugart/europaphp": "*"
     }
 }
