Update deps. Minor cleanup. Module manager now uses the module name for the index and the specified offset for the alias. Modules can now be added from any source and require a name in the configuration.

--- a/europaphp.yml
+++ b/europaphp.yml
@@ -1,4 +1,4 @@
 modules:
-  europaphp/help:
-  europaphp/main:
-  europaphp/tests:
+  vendor/europaphp/module-help:
+  vendor/europaphp/module-main:
+  vendor/europaphp/module-tests:
