Only require certain modules when in dev.

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         }
     },
     "require": {
-        "php": "5.4.*",
-        "europaphp/module-help": "dev-master",
+        "php": "5.4.*"
+    },
+    "require-dev": {
         "europaphp/module-main": "dev-master",
         "europaphp/module-tests": "dev-master",
         "treshugart/testes": "1.0.x-dev"
