--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "license": "MIT",
     "name": "treshugart/europaphp",
     "require": {
-        "php": "5.4.*",
+        "php": ">=5.4.0, <6.0.0",
         "ext-yaml": "1.1.*"
     },
     "require-dev": {
